--- a/test.html
+++ b/test.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<meta charset="utf-8">
 		<title>INDEX</title>
-		<link rel="stylesheet" href="style.css">
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.10/p5.min.js"></script>
 
-		<script type="text/javascript" src="scripts/colorpicker/js/colorpicker.js"></script>
-		<link rel="stylesheet" media="screen" type="text/css" href="scripts/colorpicker/css/colorpicker.css" />
+		<link rel="stylesheet" href="style.css">
+		<script type="text/javascript">
+			var fillColour;
+			var fadeColour1;
+			var fadeColour2;
+		</script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.10/p5.min.js"></script>
 
 	</head>
 	<body>
-		<div class="create"></div>
-		<script src="scripts/sketch.js"></script>
+		<div class="create" id="here">
+		</div>
+		<script type="text/javascript" src="scripts/sketch.js"></script>
 	</body>
 </html>
