--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<title>INDEX</title>
 
 		<link rel="stylesheet" href="style.css">
-		<script type="text/javascript">
-			var fillColour;
-			var fadeColour1;
-			var fadeColour2;
-		</script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.10/p5.min.js"></script>
 
+		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css"/>
+		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
 	</head>
+
 	<body>
-		<div class="create" id="here">
-		</div>
+		<p>
+			<label for="amount">circle size:</label>
+			<input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+		</p>
+		<div id="slider-range"></div>
 		<script type="text/javascript" src="scripts/sketch.js"></script>
 	</body>
+
 </html>
