change layers individually

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
 	<body>
 		<div class="styleControls">
-			<p id="gridCircles">GRID_CIRCLES</p>
-			<p id="randoCircles">RANDO_CIRCLES</p>
-			<p id="weirdoCircles">WEIRDO_CIRCLES</p>
-			<p id="randoSquares">RANDO_SQUARES</p>
-			<p id="gridSquares">GRID_SQUARES</p>
+
+			<div></div>
+			<div class="styleMode" id="gridCircles">GRID_CIRCLES</div>
+			<div class="styleMode" id="randoCircles">RANDO_CIRCLES</div>
+			<div class="styleMode" id="weirdoCircles">WEIRDO_CIRCLES</div>
+			<div class="styleMode" id="randoSquares">RANDO_SQUARES</div>
+			<div class="styleMode" id="gridSquares">GRID_SQUARES</div>
 
 			<div id="slider1">
 				<p>
@@ -39,7 +41,7 @@
 				<div id="gridSize-range"></div>
 			</div>
 
-			<input class="color" id="colourTextBox" value="66ff00">
+			<input class="color" id="colourTextBox" value="F0FF19">
 		</div>
 
 
