--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div id="gridSize-range"></div>
 			</div>
 
-			<input class="color" id="colourTextBox" value="F0FF19">
+			<input class="color" id="colourTextBox" value="19D9FF">
 		</div>
 
 
