--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	<body>
 		<div class="styleControls">
 				
-			<input id="textBox" type="text" value="TEXT">
+			<input id="textBox" type="text" value="TEST">
 
+			<div class="styleMode allign" id="normal">NORMAL</div>
 			<div class="styleMode allign" id="gridCircles">GRID_CIRCLES</div>
 			<div class="styleMode allign" id="randoCircles">RANDO_CIRCLES</div>
 			<div class="styleMode allign" id="weirdoCircles">WEIRDO_CIRCLES</div>
@@ -30,7 +31,7 @@
 					<label for="shapeSize">circle size:</label>
 					<input type="text" id="shapeSize" readonly style="border:0; color:#f6931f; font-weight:bold;">
 				</p>
-				<div class="allign" class="slider" id="shapeSize-range"></div>
+				<div class="allign" class="slider-range" id="shapeSize-range"></div>
 			</div>
 
 			<div id="slider2">
@@ -38,7 +39,7 @@
 					<label for="gridSize">grid size:</label>
 					<input type="text" id="gridSize" readonly style="border:0; color:#f6931f; font-weight:bold;">
 				</p>
-				<div class="allign" class="slider" id="gridSize-range"></div>
+				<div class="allign" class="slider-range" id="gridSize-range"></div>
 			</div>
 
 			<div id="slider3">
@@ -46,7 +47,7 @@
 					<label for="xOffset">x-offset:</label>
 					<input type="text" id="xOffset" readonly style="border:0; color:#f6931f; font-weight:bold;">
 				</p>
-				<div class="allign" class="slider" id="xOffset-range"></div>
+				<div class="allign" class="slider-range" id="xOffset-range"></div>
 			</div>
 
 			<div id="slider4">
@@ -54,7 +55,7 @@
 					<label for="yOffset">y-offset:</label>
 					<input type="text" id="yOffset" readonly style="border:0; color:#f6931f; font-weight:bold;">
 				</p>
-				<div class="allign" class="slider" id="yOffset-range"></div>
+				<div class="allign" class="slider-range" id="yOffset-range"></div>
 			</div>
 
 			<input class="color" id="colourTextBox" value="19D9FF">
