--- a/index.html
+++ b/index.html
@@ -61,8 +61,15 @@
 			<input class="color" id="colourTextBox" value="19D9FF">
 
 			<div id="layers">
+				<div class="layer" id="layer0">LAYER0</div>
 				<div class="layer" id="layer1">LAYER1</div>
 				<div class="layer" id="layer2">LAYER2</div>
+				<div class="layer" id="layer3">LAYER3</div>
+				<div class="layer" id="layer4">LAYER4</div>
+<!-- 				<div class="layer" id="layer5">LAYER5</div>
+				<div class="layer" id="layer6">LAYER6</div>
+				<div class="layer" id="layer7">LAYER7</div>
+				<div class="layer" id="layer8">LAYER8</div> -->
 			</div>
 			<div id="newLayer" class="allign"> <div class="plusIcon">+</div> LAYER </div>
 		</div>
