one layer at a time, with gridand shape control

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
 				
 			<input id="textBox" type="text" value="TEST">
 
-			<div class="styleMode allign" id="normal">NORMAL</div>
-			<div class="styleMode allign" id="gridCircles">GRID_CIRCLES</div>
-			<div class="styleMode allign" id="randoCircles">RANDO_CIRCLES</div>
-			<div class="styleMode allign" id="weirdoCircles">WEIRDO_CIRCLES</div>
-			<div class="styleMode allign" id="randoSquares">RANDO_SQUARES</div>
-			<div class="styleMode allign" id="gridSquares">GRID_SQUARES</div>
+			<div class="styleMode allign active" id="normal">NORMAL</div>
+			<div class="styleMode allign" id="circles">CIRCLES</div>
+			<div class="styleMode allign" id="squares">SQUARES</div>
+			<div class="styleMode allign" id="exes">EXES</div>
+			<div class="styleMode allign" id="polygons">POLYGONS</div>
+			<div id="gridControl">
+				<div class="gridControl active" id="gridOn">GRID ON</div>
+				<div class="gridControl" id="gridOff">GRID OFF</div>
+			</div>
+			<!-- <div class="styleMode allign" id="randoSquares">RANDO_SQUARES</div> -->
+			<!--<div class="styleMode allign" id="randoCircles">RANDO_CIRCLES</div>-->			
 
 			<div id="slider1">
 				<p>
@@ -62,19 +67,9 @@
 
 			<div id="layers">
 				<div class="layer" id="layer0">LAYER0</div>
-				<div class="layer" id="layer1">LAYER1</div>
-				<div class="layer" id="layer2">LAYER2</div>
-				<div class="layer" id="layer3">LAYER3</div>
-				<div class="layer" id="layer4">LAYER4</div>
-<!-- 				<div class="layer" id="layer5">LAYER5</div>
-				<div class="layer" id="layer6">LAYER6</div>
-				<div class="layer" id="layer7">LAYER7</div>
-				<div class="layer" id="layer8">LAYER8</div> -->
 			</div>
 			<div id="newLayer" class="allign"> <div class="plusIcon">+</div> LAYER </div>
 		</div>
-
-
 
 		<script type="text/javascript" src="scripts/jscolor/jscolor.js"></script>
 		<script type="text/javascript" src="scripts/sketch.js"></script>
