editable layer names.

--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
 			<input class="color" id="colourTextBox" value="19D9FF">
 
 			<div id="layers">
-				<div class="layer active" id="layer0">LAYER0</div>
-
-<!-- 				<div class="layer" id="layer1">LAYER1</div>
-				<div class="layer" id="layer2">LAYER2</div>
-				<div class="layer" id="layer3">LAYER3</div> -->
+				<div class="layer active" id="layer0">
+					<div class="layerName">LAYER0</div><div class="edit"></div>
+				</div>
 			</div>
 			<div id="newLayer" class="allign"> <div class="plusIcon">+</div> LAYER </div>
 		</div>
