--- a/README.html
+++ b/README.html
@@ -1,5 +1,4 @@
-<p>Glyphabet is&hellip;</p>
-
-<p>A tool for digital lettering.</p>
-
+<h3>Glyphabet is a tool for digital lettering.</h3>
 <p>Create. Share. Get inspired.</p>
+
+<a href="http://lwaxman.github.io/glyphabet/">TRY IT HERE.</a>
