--- a/README.html
+++ b/README.html
@@ -1,5 +1,3 @@
-<p>Glyphabet is&hellip;</p>
+<h3>Glyphabet is a tool for digital lettering.</h3>
 
-<p>A tool for digital lettering.</p>
-
-<p>Create. Share. Get inspired.</p>
+<a href="http://lwaxman.github.io/glyphabet">TRY IT HERE.</a>
