--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<body>
 		<div class="styleControls">
 				
+			<img src="images/logo-01.png" alt="glyphabetLogo" width="200" height="200" id="logoCircle">
 			<input id="textBox" type="text" value="TEST">
 
 			<div class="styleMode allign active" id="normal">NORMAL</div>
