fixed text size problem

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<div class="allign" class="slider-range" id="yOffset-range"></div>
 			</div>
 
-			<input class="color" id="colourTextBox" value="19D9FF">
+			<input class="color" id="colourTextBox" value="000000">
 
 			<div id="layers">
 				<div class="layer active" id="layer0">
