changed text to images, fixed resize

--- a/index.html
+++ b/index.html
@@ -15,64 +15,71 @@
 	</head>
 
 	<body>
-		<div class="styleControls">
-				
-			<img src="images/logo-01.png" alt="glyphabetLogo" width="200" height="200" id="logoCircle">
-			<input id="textBox" type="text" value="TEST">
+		<!-- <div class="floatAllMiddle"> -->
+			<div class="styleControls">
+					
+				<img src="images/logo-01.png" alt="glyphabetLogo" width="200" height="200" id="logoCircle">
+				<input id="textBox" type="text" value="TEST">
 
-			<div class="styleMode allign active" id="normal">NORMAL</div>
-			<div class="styleMode allign" id="circles">CIRCLES</div>
-			<div class="styleMode allign" id="squares">SQUARES</div>
-			<div class="styleMode allign" id="exes">EXES</div>
-			<div class="styleMode allign" id="polygons">POLYGONS</div>
-			<div id="gridControl">
-				<div class="gridControl active" id="gridOn">GRID ON</div>
-				<div class="gridControl" id="gridOff">GRID OFF</div>
-			</div>
-			<!-- <div class="styleMode allign" id="randoSquares">RANDO_SQUARES</div> -->
-			<!--<div class="styleMode allign" id="randoCircles">RANDO_CIRCLES</div>-->			
-
-			<div id="slider1">
-				<p>
-					<label for="shapeSize">circle size:</label>
-					<input type="text" id="shapeSize" readonly style="border:0; color:#f6931f; font-weight:bold;">
-				</p>
-				<div class="allign" class="slider-range" id="shapeSize-range"></div>
-			</div>
-
-			<div id="slider2">
-				<p>
-					<label for="gridSize">grid size:</label>
-					<input type="text" id="gridSize" readonly style="border:0; color:#f6931f; font-weight:bold;">
-				</p>
-				<div class="allign" class="slider-range" id="gridSize-range"></div>
-			</div>
-
-			<div id="slider3">
-				<p>
-					<label for="xOffset">x-offset:</label>
-					<input type="text" id="xOffset" readonly style="border:0; color:#f6931f; font-weight:bold;">
-				</p>
-				<div class="allign" class="slider-range" id="xOffset-range"></div>
-			</div>
-
-			<div id="slider4">
-				<p>
-					<label for="yOffset">y-offset:</label>
-					<input type="text" id="yOffset" readonly style="border:0; color:#f6931f; font-weight:bold;">
-				</p>
-				<div class="allign" class="slider-range" id="yOffset-range"></div>
-			</div>
-
-			<input class="color" id="colourTextBox" value="000000">
-
-			<div id="layers">
-				<div class="layer active" id="layer0">
-					<div class="layerName">LAYER0</div><div class="edit"></div>
+				<div id="styleControl">
+					<div class="styleMode allign active" id="normal"><img width="30" src="images/style-02.png" alt="normal"></div>
+					<div class="styleMode allign" id="circles"><img width="30" src="images/style-03.png" alt="circles"></div>
+					<div class="styleMode allign" id="squares"><img width="30" src="images/style-01.png" alt="squares"></div>
+					<div class="styleMode allign" id="exes"><img width="30" src="images/style-04.png" alt="exes"></div>
+					<div class="styleMode allign" id="polygons"><img width="30" src="images/style-05.png" alt="polygons"></div>
 				</div>
+
+				<div id="gridControl">
+					<div class="gridControl active" id="gridOn">GRID ON</div>
+					<div class="gridControl" id="gridOff">GRID OFF</div>
+				</div>
+				<!-- <div class="styleMode allign" id="randoSquares">RANDO_SQUARES</div> -->
+				<!--<div class="styleMode allign" id="randoCircles">RANDO_CIRCLES</div>-->			
+
+				<div id="slider1">
+					<p>
+						<label for="shapeSize">circle size:</label>
+						<input type="text" id="shapeSize" readonly style="border:0; color:#f6931f; font-weight:bold;">
+					</p>
+					<div class="allign" class="slider-range" id="shapeSize-range"></div>
+				</div>
+
+				<div id="slider2">
+					<p>
+						<label for="gridSize">grid size:</label>
+						<input type="text" id="gridSize" readonly style="border:0; color:#f6931f; font-weight:bold;">
+					</p>
+					<div class="allign" class="slider-range" id="gridSize-range"></div>
+				</div>
+
+				<div id="slider3">
+					<p>
+						<label for="xOffset">x-offset:</label>
+						<input type="text" id="xOffset" readonly style="border:0; color:#f6931f; font-weight:bold;">
+					</p>
+					<div class="allign" class="slider-range" id="xOffset-range"></div>
+				</div>
+
+				<div id="slider4">
+					<p>
+						<label for="yOffset">y-offset:</label>
+						<input type="text" id="yOffset" readonly style="border:0; color:#f6931f; font-weight:bold;">
+					</p>
+					<div class="allign" class="slider-range" id="yOffset-range"></div>
+				</div>
+
+				<input class="color" id="colourTextBox" value="000000">
+
+				<div id="layers">
+					<div class="layer active" id="layer0">
+						<div class="layerName">LAYER0</div><div class="edit"></div>
+					</div>
+				</div>
+				<div id="newLayer" class="allign"> <div class="plusIcon">+</div> LAYER </div>
 			</div>
-			<div id="newLayer" class="allign"> <div class="plusIcon">+</div> LAYER </div>
-		</div>
+
+			<!-- <div id="canvasContainer"></div> -->
+		<!-- </div> -->
 
 		<script type="text/javascript" src="scripts/jscolor/jscolor.js"></script>
 		<script type="text/javascript" src="scripts/sketch.js"></script>
