added opacity and changed layer limit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 				<div id="slider1">
 					<p>
-						<label for="shapeSize">circle size:</label>
+						<label for="shapeSize">shape size:</label>
 						<input type="text" id="shapeSize" readonly style="border:0; color:#f6931f; font-weight:bold;">
 					</p>
 					<div class="allign" class="slider-range" id="shapeSize-range"></div>
@@ -66,6 +66,14 @@
 						<input type="text" id="yOffset" readonly style="border:0; color:#f6931f; font-weight:bold;">
 					</p>
 					<div class="allign" class="slider-range" id="yOffset-range"></div>
+				</div>
+
+				<div id="slider5">
+					<p>
+						<label for="opacity">opacity:</label>
+						<input type="text" id="opacity" readonly style="border:0; color:#f6931f; font-weight:bold;">
+					</p>
+					<div class="allign" class="slider-range" id="opacity-range"></div>
 				</div>
 
 				<input class="color" id="colourTextBox" value="000000">
