--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>INDEX</title>
+		<title>Glyphabet - Create</title>
 
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
 			<div class="styleControls">
 					
 				<img src="images/logo-01.png" alt="glyphabetLogo" width="200" height="200" id="logoCircle">
-				<input id="textBox" type="text" value="TEST">
+				<input id="textBox" type="text" value="TEXT">
 
 				<div id="styleControl">
 					<div class="styleMode allign active" id="normal"><img width="30" src="images/style-02.png" alt="normal"></div>
