--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
 			<div id="canvasContainer"></div>
 		<!-- </div> -->
 
+		<div id="lightBox">
+			<img src="http://img1.wikia.nocookie.net/__cb20061003200043/uncyclopedia/images/4/44/White_square.png" id="imageContainer" alt="yourImageHere" width="800" height="800">
+		</div>
+
 		<script type="text/javascript" src="scripts/jscolor/jscolor.js"></script>
 		<script type="text/javascript" src="scripts/sketch.js"></script>
 
