added more varieties, started mock-up feed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 					<div class="styleMode allign" id="circles"><img width="30" src="images/style-03.png" alt="circles"></div>
 					<div class="styleMode allign" id="squares"><img width="30" src="images/style-01.png" alt="squares"></div>
 					<div class="styleMode allign" id="exes"><img width="30" src="images/style-04.png" alt="exes"></div>
+					<div class="styleMode allign" id="lines"><img width="30" src="images/style-06.png" alt="lines"></div>
+					<div class="styleMode allign" id="triangles"><img width="30" src="images/style-07.png" alt="triangles"></div>
 					<div class="styleMode allign" id="polygons"><img width="30" src="images/style-05.png" alt="polygons"></div>
 				</div>
 
