--- a/mockUp.html
+++ b/mockUp.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>INDEX</title>
-	    <link rel="stylesheet" href="mockUp.css">
+	    <link rel="stylesheet" href="css/mockUp.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -12,7 +12,15 @@
     			<div class="info">
     				<p>nameHere</p>
     				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
+    			</div>
+    		</div>
+    		<div class="contentBox">
+    			<img src="http://fillmurray.com/400/400" alt="content">
+    			<div class="info">
+    				<p>nameHere</p>
+    				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
     			</div>
     		</div>
     		<div class="contentBox">
@@ -36,6 +44,30 @@
     			<div class="info">
     				<p>nameHere</p>
     				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
+    			</div>
+    		</div>
+    		<div class="contentBox">
+    			<img src="http://fillmurray.com/400/400" alt="content">
+    			<div class="info">
+    				<p>nameHere</p>
+    				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
+    			</div>
+    		</div>
+    		<div class="contentBox">
+    			<img src="http://fillmurray.com/400/400" alt="content">
+    			<div class="info">
+    				<p>nameHere</p>
+    				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
+    			</div>
+    		</div>
+    		<div class="contentBox">
+    			<img src="http://fillmurray.com/400/400" alt="content">
+    			<div class="info">
+    				<p>nameHere</p>
+    				<img width="20" height="20" src="images/themeFalse.png" alt="theme">
     				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
     			</div>
     		</div>
@@ -44,7 +76,7 @@
     			<div class="info">
     				<p>nameHere</p>
     				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
     			</div>
     		</div>
     		<div class="contentBox">
@@ -52,7 +84,7 @@
     			<div class="info">
     				<p>nameHere</p>
     				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
     			</div>
     		</div>
     		<div class="contentBox">
@@ -60,44 +92,12 @@
     			<div class="info">
     				<p>nameHere</p>
     				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
+    				<img width="20" height="20" src="images/favouriteFalse.png" alt="favourite">
     			</div>
     		</div>
     		<div class="contentBox">
     			<img src="http://fillmurray.com/400/400" alt="content">
     			<div class="info">
-    				<p>nameHere</p>
-    				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
-    			</div>
-    		</div>
-    		<div class="contentBox">
-    			<img src="http://fillmurray.com/400/400" alt="content">
-    			<div class="info">
-    				<p>nameHere</p>
-    				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
-    			</div>
-    		</div>
-    		<div class="contentBox">
-    			<img src="http://fillmurray.com/400/400" alt="content">
-    			<div class="info">
-    				<p>nameHere</p>
-    				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
-    			</div>
-    		</div>
-    		<div class="contentBox">
-    			<img src="http://fillmurray.com/400/400" alt="content">
-    			<div class="info">
-    				<p>nameHere</p>
-    				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
-    				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
-    			</div>
-    		</div>
-    		<div class="contentBox">
-    			<img src="http://fillmurray.com/400/400" alt="content">
-    			<div>
     				<p>nameHere</p>
     				<img width="20" height="20" src="images/themeTrue.png" alt="theme">
     				<img width="20" height="20" src="images/favouriteTrue.png" alt="favourite">
