--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<div class="styleMode allign" id="circles"><img width="30" src="images/style-03.png" alt="circles"></div>
 					<div class="styleMode allign" id="squares"><img width="30" src="images/style-01.png" alt="squares"></div>
 					<div class="styleMode allign" id="exes"><img width="30" src="images/style-04.png" alt="exes"></div>
-					<div class="styleMode allign" id="lines"><img width="30" src="images/style-06.png" alt="lines"></div>
-					<div class="styleMode allign" id="triangles"><img width="30" src="images/style-07.png" alt="triangles"></div>
+					<div class="styleMode allign" id="lines"><img width="30" src="images/styles-01.png" alt="lines"></div>
+					<div class="styleMode allign" id="triangles"><img width="30" src="images/styles-02.png" alt="triangles"></div>
 					<div class="styleMode allign" id="polygons"><img width="30" src="images/style-05.png" alt="polygons"></div>
 				</div>
 
@@ -83,10 +83,10 @@
 
 				<div id="font">
 					<ul id="fontMenu">
-						<li class="fontStyle active" id="sansSerif">T</li>
-						<li class="fontStyle" id="serif">T</li>
-						<li class="fontStyle" id="monospace">T</li>
-						<li class="fontStyle" id="brushScript">T</li>
+						<img src="images/font-01.png" alt="fontStyle" id="sansSerif" class="fontStyle">
+						<img src="images/font-02.png" alt="fontStyle" id="serif" class="fontStyle">
+						<img src="images/font-03.png" alt="fontStyle" id="monospace" class="fontStyle">
+						<img src="images/font-04.png" alt="fontStyle" id="brushScript" class="fontStyle">
 					<ul>
 				</div>
 
