--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="styleControls">
 					
 				<img src="images/logo-01.png" alt="glyphabetLogo" width="100" height="100" id="logoCircle">
-				<input id="textBox" type="text" value="TEXT">
+				<input id="textBox" type="text" value="hello">
 
 				<div id="styleControl">
 					<div class="styleMode allign active" id="normal"><img width="30" src="images/style-02.png" alt="normal"></div>
@@ -83,7 +83,7 @@
 
 				<div id="font">
 					<ul id="fontMenu">
-						<img src="images/font-01.png" alt="fontStyle" id="sansSerif" class="fontStyle">
+						<img src="images/font-01.png" alt="fontStyle" id="sansSerif" class="fontStyle active">
 						<img src="images/font-02.png" alt="fontStyle" id="serif" class="fontStyle">
 						<img src="images/font-03.png" alt="fontStyle" id="monospace" class="fontStyle">
 						<img src="images/font-04.png" alt="fontStyle" id="brushScript" class="fontStyle">
@@ -99,7 +99,7 @@
 
 				<div id="bottomButtons">
 					<div id="save">SAVE</div>
-					<div id="viewFeed">VIEW FEED</div>
+					<div id="clear">CLEAR</div>
 				</div>
 			</div>
 
